--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "chat-app",
   "version": "1.0.0",
-  "description": "Simple Chat App",
+  "description": "Professional Chat App",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "mongoose": "^8.0.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
-
